force-app/main/default/objects/AlertConfiguration__c/AlertConfiguration__c.object-meta.xml
<CustomObject>
    <label>Regola Alert</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Regola Alert</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regole Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>