force-app/main/default/objects/AlertConfiguration__c/fields/AlertType__c.field-meta.xml
<CustomField>
    <fullName>AlertType__c</fullName>
    <label>Tipologia Alert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emissione bolletta/fattura</fullName>
            </value>
            <value>
                <fullName>Periodo autolettura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>