force-app/main/default/objects/AlertConfiguration__c/fields/BillSendingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillSendingMethod__c</fullName>
    <description>Modalità invio bolletta per la quale la regola è valida</description>
    <label>Modalità invio bolletta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillSendingMethod</valueSetName>
    </valueSet>
</CustomField>