force-app/main/default/objects/AlertConfiguration__c/fields/IsPushChannelActive__c.field-meta.xml
<CustomField>
    <fullName>IsPushChannelActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per accendere/spegnere la delivery dell&apos;alert sul canale Push</description>
    <label>Canale Push</label>
    <type>Checkbox</type>
</CustomField>